# life-map-back

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  debug_routes.py  docker-compose.yml  entrypoint.sh  pyproject.toml  routes_output.txt  run.sh
.agent/skills/adk_tool_generator/: SKILL.md
.agent/skills/alembic_migration_manager/: SKILL.md
.agent/skills/fastapi_route_creator/: SKILL.md
agents/: agent.py  constants.py  dependencies.py
agents/.adk/: session.db
agents/prompts/: __init__.py  alerts.md  finance.md  health.md  social.md  system.md  tools.md
agents/sub_agents/: __init__.py  alerts_agent.py  finance_agent.py  health_agent.py  social_agent.py
agents/tools/: __init__.py  alert_tools.py  category_tools.py  finance_tools.py  health_tools.py  item_tools.py  social_tools.py
alembic/: env.py
alembic/versions/: 001_initial_baseline.py  002_dependency_metadata.py  003_add_cascade_delete.py  004_cascade_widgets.py  005_missing_tables.py
app/: initial_data.py  main.py  server.py
app/api/endpoints/: agent.py  categories.py  finance.py  real_estate.py  settings.py  social.py
app/api/v1/endpoints/: alerts.py  assets.py  dependencies.py  finance.py  health.py  items.py
app/core/: config.py  database.py
app/models/: __init__.py  alerts.py  asset_config.py  categories.py  dependencies.py  finance.py  health.py  item.py  real_estate.py  settings.py  social.py
app/schemas/: alerts.py  asset_config.py  categories.py  chat.py  dependencies.py  enums.py  finance.py  health.py  items.py  real_estate.py  settings.py  social.py  widgets.py
app/services/: alert_service.py  category_service.py  dependency_service.py  finance_service.py  gemini_service.py  health_service.py  item_service.py  real_estate_service.py  settings_service.py  social_service.py
scripts/: reset_asset_table.py
tests/: test_main.py  test_recurring.py
